fix: adjust credit box background image size
background-size was originally "contain" but was switched to "cover".
Cover shrinks the image leaving a ton of white space on an iphone while
contain leaves a properly sized yet fully white box. If auto does not
produce satisfactory results, background-size will be returned to
"contain" which looks great on PC but is just a white box on iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,7 +130,7 @@ p {
 /* Credit box */
 .credits-box {
     background-image: url("../assets/creditspopup.webp");
-    background-size: cover;
+    background-size: auto;
     background-repeat: no-repeat;
     background-position: center;
 
